# wasmer-multivalue-demo

./: .gitignore
example_wasm/: Cargo.toml
example_wasm/src/: lib.rs  panic.rs
wasmer_host/: Cargo.toml
wasmer_host/src/: main.rs
wasmer_host/src/wasm/: mod.rs
wasmer_host/src/wasm/wasm_env/: mod.rs
wasmer_host/src/wasm/wasm_env/debug/: mod.rs
